<resources>
    <string name="app_name">Demo</string>
    <string name="menu">Menu</string>
    <string name="view_profile">View my profile</string>
    <string name="manage_community">Manage Community</string>
    <string name="report_a_problem">Report A Problem</string>
    <string name="about_us">About Us</string>
    <string name="rate_app">Rate Our App</string>
    <string name="manage_events">Manage Events</string>
    <string name="settings">Settings</string>
    <string name="share_app">Share Our App</string>
</resources>